--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# Alexnet with ImageNet weights\n",
-    "model = models.AlexNet()\n"
+    "model = models.AlexNet()"
    ]
   },
   {
