Can not squeeze dim[3], expected a dimension of 1

--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,6 +209,41 @@
     "if image_channel:\n",
     "    plot_images(image_channel)   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer: Conv2D, Shape: (None, 55, 55, 96)\n",
+      "Layer: Conv2D_1, Shape: (None, 27, 27, 128)\n",
+      "Layer: Conv2D_2, Shape: (None, 27, 27, 128)\n",
+      "Layer: Conv2D_3, Shape: (None, 13, 13, 384)\n",
+      "Layer: Conv2D_4, Shape: (None, 13, 13, 192)\n",
+      "Layer: Conv2D_5, Shape: (None, 13, 13, 192)\n",
+      "Layer: Conv2D_6, Shape: (None, 13, 13, 128)\n",
+      "Layer: Conv2D_7, Shape: (None, 13, 13, 128)\n",
+      "Layer: Relu, Shape: (None, 4096)\n",
+      "Layer: Relu_1, Shape: (None, 4096)\n",
+      "Layer: Softmax, Shape: (None, 1000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for layer, shape in layer_shape_dict.items():\n",
+    "    print(f'Layer: {layer}, Shape: {shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
