Dimensions must be equal

--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,9 +165,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f4bc8b1435264fa3b55da55bb528900c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Layer:', options=('Conv2D', 'Conv2D_1', 'Conv2D_2', 'Conv2D_3', 'C…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.visualize(layer_name, channel)>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "layer_dropdown.observe(update_channel_slider, names='value')\n",
     "\n",
@@ -212,27 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Layer: Conv2D, Shape: (None, 55, 55, 96)\n",
-      "Layer: Conv2D_1, Shape: (None, 27, 27, 128)\n",
-      "Layer: Conv2D_2, Shape: (None, 27, 27, 128)\n",
-      "Layer: Conv2D_3, Shape: (None, 13, 13, 384)\n",
-      "Layer: Conv2D_4, Shape: (None, 13, 13, 192)\n",
-      "Layer: Conv2D_5, Shape: (None, 13, 13, 192)\n",
-      "Layer: Conv2D_6, Shape: (None, 13, 13, 128)\n",
-      "Layer: Conv2D_7, Shape: (None, 13, 13, 128)\n",
-      "Layer: Relu, Shape: (None, 4096)\n",
-      "Layer: Relu_1, Shape: (None, 4096)\n",
-      "Layer: Softmax, Shape: (None, 1000)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for layer, shape in layer_shape_dict.items():\n",
     "    print(f'Layer: {layer}, Shape: {shape}')"
