--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -237,12 +237,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer: Conv2D, Shape: (None, 55, 55, 96)\n",
+      "Layer: Conv2D_1, Shape: (None, 27, 27, 128)\n",
+      "Layer: Conv2D_2, Shape: (None, 27, 27, 128)\n",
+      "Layer: Conv2D_3, Shape: (None, 13, 13, 384)\n",
+      "Layer: Conv2D_4, Shape: (None, 13, 13, 192)\n",
+      "Layer: Conv2D_5, Shape: (None, 13, 13, 192)\n",
+      "Layer: Conv2D_6, Shape: (None, 13, 13, 128)\n",
+      "Layer: Conv2D_7, Shape: (None, 13, 13, 128)\n",
+      "Layer: Relu, Shape: (None, 4096)\n",
+      "Layer: Relu_1, Shape: (None, 4096)\n",
+      "Layer: Softmax, Shape: (None, 1000)\n"
+     ]
+    }
+   ],
    "source": [
     "for layer, shape in layer_shape_dict.items():\n",
-    "    print(f'Layer: {layer}, Shape: {shape}')"
+    "    print(f'Layer: {layer}, Shape: {shape}')\n",
+    "    "
    ]
   },
   {
