Can not squeeze dim[3], expected a dimension of 1, got 3

--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
     "import lucid_kietzmannlab.modelzoo.vision_models as models\n",
+    "from lucid_kietzmannlab.modelzoo.vision_models import get_layer_names_tensors\n",
     "import lucid_kietzmannlab.optvis.objectives as objectives\n",
     "import lucid_kietzmannlab.optvis.render as render\n",
     "from IPython.display import clear_output\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +172,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d8fdd350d4640728a48929478071fdb",
+       "model_id": "87a714536a214ccf920be610b4770751",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,17 +234,6 @@
     "\n",
     "if image_channel:\n",
     "    plot_images(image_channel)   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for layer, shape in layer_shape_dict.items():\n",
-    "    print(f'Layer: {layer}, Shape: {shape}')\n",
-    "    "
    ]
   },
   {
