Can not squeeze dim[3], expected a dimension of 1, got 3

--- a/examples/interation_between_neurons.ipynb
+++ b/examples/interation_between_neurons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,6 @@
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm\n",
     "import lucid_kietzmannlab.modelzoo.vision_models as models\n",
-    "from lucid_kietzmannlab.modelzoo.vision_models import get_layer_names_tensors\n",
     "import lucid_kietzmannlab.optvis.objectives as objectives\n",
     "import lucid_kietzmannlab.optvis.render as render\n",
     "from IPython.display import clear_output\n",
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,10 +84,10 @@
     "        if 0 <= channel <= max_channel:\n",
     "            clear_output(wait=True)\n",
     "            # Render visualization for the selected layer and channel\n",
-    "            #try:\n",
-    "            _ = render.render_vis(model, C((layer_name, channel)))\n",
-    "            #except Exception:\n",
-    "            #    print('No gradients for this layer')   \n",
+    "            try:\n",
+    "              _ = render.render_vis(model, C((layer_name, channel)))\n",
+    "            except Exception:\n",
+    "                print('No gradients for this layer')   \n",
     "\n",
     "def visualize_all():\n",
     "    # Check if the layer exists in the shape dictionary\n",
@@ -172,7 +171,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87a714536a214ccf920be610b4770751",
+       "model_id": "c5994f7d677e4e19bf818714499691ea",
        "version_major": 2,
        "version_minor": 0
       },
